--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Make London Easy</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string-array name="drawerMenu">
+        <item>Journey Planner</item>
+        <item>Line Status</item>
+        <item>Other Services Around You</item>
+        <item>Buy Oyster card</item>
+    </string-array>
 </resources>
